# cw_pyt_lib

./: .env.example  .flake8  .gitignore  README.md  config.py  ext_api.py  lint.cmd  lint_add.cmd  main.py  pyproject.toml  user_settings.json
data/: 1month.xlsx  currency.json  operations.xls  test.xlsx
src/: 1mont.csv  1month.xlsx  categ.py  data_conn.py  date_change.py  ext_api.py  external_api.py  main.py  main_report.py  main_service.py  main_views.py  output.csv  reports.py  services.py  top5.csv  utils.py  views.py
tests/: conftest.py  test_data_conn.py  test_df.xlsx  test_external_api.py  test_reports.py  test_services.py  test_utils.py  test_views.py  user_settings_test.json
